# git-lfs-synology

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: Dockerfile.build  rust.yml
scripts/: install.ps1  install.py
src/: config_dir.rs  configuration.rs  credential_manager.rs  main.rs  synology_file_station.rs  users_dirs.rs
src/commands/: login_command.rs  mod.rs
src/git_lfs/: custom_transfer_agent.rs  git_lfs_parser.rs  mod.rs
src/subcommands/: login_subcommand.rs  logout_subcommand.rs  main_subcommand.rs  mod.rs  subcommand.rs
src/synology_api/: file_station.rs  mod.rs  progress_reporter.rs  responses.rs
