[package]
name = "git-lfs-synology"
version = "0.1.0"
edition = "2021"

[dependencies]
aead = { version = "0.5.2", features = ["std"] }
aes-gcm = "0.10.3"
anyhow = "1.0.93"
app_dirs2 = "2.5.5"
clap = "4.5.21"
futures-macro = "0.3.31"
keyring = { version = "3.6.1", features = ["apple-native", "windows-native", "sync-secret-service"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
reqwest = { version = "0.12.9", features = ["json"] }
rpassword = "7.3.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yml = "0.0.12"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
