[package]
name = "git-lfs-synology"
version = "0.1.0"
edition = "2021"

[dependencies]
aead = { version = "0.5.2", features = ["std"] }
aes-gcm = "0.10.3"
anyhow = "1.0.93"
app_dirs2 = "2.5.5"
clap = { version = "4.5.21", features = ["cargo"] }
educe = "0.6.0"
futures-macro = "0.3.31"
futures-util = "0.3.31"
gix-config = "0.42.0"
keyring = { version = "3.6.1", features = ["apple-native", "windows-native", "sync-secret-service"] }
named-lock = "0.4.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
reqwest = { version = "0.12.9", features = ["stream", "multipart"] }
rpassword = "7.3.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["fs", "macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.12", features = ["io"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
url = "2.5.4"
urlencoding = "2.1.3"
